Creacion del docker file y compose, anexo de SQL para la creacion de la BD

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /.metadata/*
-Docker/schemas/*
-#!Docker/schemas/primefacesBD/
+/Docker/*
+!docker-compose.yml
+!Dockerfile
+/entrega/*
+!entrega/BDOctans.sql
