--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
             - 3380:3306
         environment:
             MYSQL_ROOT_PASSWORD: "root"
-            MYSQL_DATABASE: "primacesBD"
+            MYSQL_DATABASE: "bdoctans"
             MYSQL_USER: "userdb"
             MYSQL_PASSWORD: "userpwd"
         volumes:
