Ajuste en la estructura del proyecto

--- a/back/ms_tech_test/src/main/resources/application.yml
+++ b/back/ms_tech_test/src/main/resources/application.yml
@@ -13,3 +13,10 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
+server:
+  port: 8180
+  error:
+    include-stacktrace: never
+    include-exception: false
+    whitelabel:
+      enabled: true
